[gd_scene load_steps=10 format=3 uid="uid://pxdbp65ht4ke"]

[ext_resource type="Script" uid="uid://crhy2da2gjytx" path="res://Scripts/player.gd" id="1_v0iea"]
[ext_resource type="PackedScene" uid="uid://djkgb0fhtur0n" path="res://3D/Revolver.blend" id="2_cvnsp"]
[ext_resource type="AudioStream" uid="uid://dbeiln8kythrt" path="res://Sounds/cocking-a-revolver-6279.wav" id="3_vgqql"]
[ext_resource type="AudioStream" uid="uid://cvxyyt6ow30ir" path="res://Sounds/single-pistol-gunshot-33-37187.wav" id="4_fkybt"]
[ext_resource type="AudioStream" uid="uid://d27jpun7546f3" path="res://Sounds/double-dry-fire-364847.wav" id="5_fkybt"]
[ext_resource type="AudioStream" uid="uid://ccwnm6fbeu414" path="res://Sounds/HalfDeCock.wav" id="6_3smsa"]
[ext_resource type="AudioStream" uid="uid://dntk1w4jrajfq" path="res://Sounds/HalfCock.wav" id="7_8erm5"]
[ext_resource type="AudioStream" uid="uid://b238wbwh52vkj" path="res://Sounds/clean-revolver-reload-6889.wav" id="8_8erm5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f60y1"]
height = 1.77196

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_v0iea")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_f60y1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.43073007, 0.18838778)
current = true

[node name="Revolver" parent="Camera3D" instance=ExtResource("2_cvnsp")]
transform = Transform3D(9.73421e-09, -0.05, -1.3175554e-10, -0.0008725775, -3.814157e-11, -0.049992386, 0.049992386, 9.735027e-09, -0.0008725775, 0.08248153, -0.036652297, -0.13146469)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BulletCount" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 64
text = "0/0"

[node name="Sounds" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CockSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_vgqql")
volume_db = 10.0

[node name="FireSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_fkybt")

[node name="DryFireSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_fkybt")

[node name="HalfDeCockSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("6_3smsa")

[node name="HalfCockSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7_8erm5")

[node name="ReloadSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_8erm5")
